log
Thu Mar 26 06:58:23 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
ad43506
Thu Mar 26 07:00:02 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
eb19ab4
Thu Mar 26 07:05:51 PM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:19: error: incompatible types when initializing type ‘List *’ {aka ‘struct List *’} using type ‘List’ {aka ‘struct List’}
   35 |     List *lista = (*lista) malloc(1 * sizeof(List));
      |                   ^
list.c:35:28: error: expected ‘,’ or ‘;’ before ‘malloc’
   35 |     List *lista = (*lista) malloc(1 * sizeof(List));
      |                            ^~~~~~
193adb8
Thu Mar 26 07:06:14 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
ac7538d
Thu Mar 26 07:08:58 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
1d44408
Thu Mar 26 07:09:37 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
59875f5
Thu Mar 26 07:10:47 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
31f2eb2
Thu Mar 26 07:13:35 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
58fb883
Thu Mar 26 07:16:51 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:18: error: initialization of ‘Node **’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   48 |     Node **aux = list->head;
      |                  ^~~~
list.c:50:19: error: assignment to ‘Node *’ from incompatible pointer type ‘Node **’ [-Wincompatible-pointer-types]
   50 |     list->current = aux;
      |                   ^
list.c:52:16: error: ‘aux’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   52 |     return (aux->data);
      |                ^~
      |             (* )
list.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1: all warnings being treated as errors
b20c82f
Thu Mar 26 07:18:18 PM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
afc02da
Thu Mar 26 07:22:35 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/60
da5ed27
